# SBIsmfs

./: .gitignore  README.md  build_cython_code.sh  generate_data_cluster.sh  pyproject.toml  requirements.txt  run_slurm_test.sh  setup.py  todo.txt
.github/workflows/: python-app.yml
analysis_notebooks/: posterior_analysis.ipynb  posterior_calibration.ipynb  real_data_inference.ipynb  sbi_smfs_syntehtic_test.ipynb  sequential_posterior_analysis.ipynb  test_snpe_transfer_learning.ipynb  trajectory_analysis.ipynb
docs/source/: api.rst  conf.py  index.rst
sbi_smfs/: config.py  config_real_data.py  test.config  test.py
sbi_smfs/analysis/: plot_posterior.py  trajectory_tools.py
sbi_smfs/inference/: __init__.py  armortized_posterior.py  build_nn_models.py  command_line_tools.py  embedding_net.py  generate_simulations.py  priors.py  sbi_generate_data.py  sbi_sequential_posterior.py  sbi_sequential_posterior_new.py  sbi_sequential_ratio.py  sbi_sequential_ratio_new.py  sbi_truncated_posterior.py  (+7 more)
scr/: brownian_integrator.pyx  embedding_net.py  gls_random.pxd  sbi_sequential_posterior.py  sbi_sequential_posterior_new.py  sbi_truncated_posterior.py  sbi_truncated_posterior_new.py  setup.py  simulator.py  stats_utils.py
tests/: test.config  test_2.config  test_configurations.py  test_embeddings.py  test_estimator_training.py  test_generate_simulations  test_generate_simulations.py  test_integrator.py  test_priors.py  test_random_numbers.py  test_simulator.py  test_spline.py  test_stat_utils.py  test_summary_utils.py  test_trajectory_tools.py  test_validate_config.py
(+29 files in other folders)
